samples/_failures_safe/1761204801_48d7d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11f25960.c: In function ‘main’:
./samples/SAFE/__tmp_11f25960.c:179:9: error: expected expression at end of input
  179 |         if (token.type ==
      |         ^~
./samples/SAFE/__tmp_11f25960.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11f25960.c:179:9: error: expected declaration or statement at end of input
